# kimodo

./: .gitignore  README.md  UPDATE.md  output.npz  output_constraints.json  pyproject.toml
demos/demo1/: meta.json  motion.npz
demos/demo2/: constraints.json  meta.json  motion.npz
docs/: NOTE.md  requirements.txt
docs/source/: conf.py  project_structure.md
docs/source/getting_started/: installation_docker.md
docs/source/interactive_demo/: export_results.md
docs/source/key_concepts/: constraints.md  skeleton.md
docs/source/user_guide/: cli.md  configuration.md  constraints.md  output_formats.md
kimodo/: constraints.py  postprocess.py  tools.py
kimodo/assets/demo/examples/kimodo-soma-rp/01_single_text_prompt/: meta.json
kimodo/assets/demo/examples/kimodo-soma-rp/03_full_body_keyframes/: meta.json
kimodo/assets/demo/examples/kimodo-soma-rp/08_stylized_text/: meta.json
kimodo/demo/: __init__.py  app.py  generation.py  queue_manager.py  ui.py
kimodo/exports/: bvh.py
kimodo/model/: kimodo_model.py  text_encoder_api.py
kimodo/scripts/: generate.py  run_text_encoder_server.py
kimodo/skeleton/: definitions.py
kimodo/viz/: constraint_ui.py  playback.py  scene.py
